--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <input type="text" value="请输入关键词">
             <button></button>
         </div>
-        
+        <div class="user">
+            <img src="images/user.png" alt="">
+            qq-lilei
+        </div>
     </div>
     <div class="banner">
         <div class="w">
